# gravitre-saas-backend

./: .env.example  .gitignore  README.md  package.json  pnpm-lock.yaml
backend/: README.md  __init__.py  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  main.py
backend/app/audit/: __init__.py  query.py
backend/app/auth/: __init__.py  dependencies.py
backend/app/billing/: __init__.py  service.py  stripe.py
backend/app/connectors/: __init__.py  crypto.py  dispatch.py  email.py  rate_limit.py  repository.py  slack.py  webhook.py
backend/app/core/: __init__.py  crypto.py  errors.py  logging.py
backend/app/metrics/: service.py
backend/app/middleware/: __init__.py  entitlements.py
backend/app/ml/: __init__.py  anomaly.py  base.py  classifiers.py  fine_tuning.py  forecasting.py  inference.py  registry.py
backend/app/operator/: __init__.py  router.py  schemas.py
backend/app/operator_module/: __init__.py  router.py
backend/app/operators/: __init__.py  repository.py  router.py  schemas.py
backend/app/policy/: engine.py
backend/app/rag/: __init__.py  embedding.py  ingest.py  retrieval.py  worker.py
backend/app/routers/: agent_council.py  ai_system.py  audit.py  auth.py  billing.py  connectors.py  decisions.py  entitlements.py  environments.py  execution.py  health.py  lite.py  metrics.py  ml_models.py  notifications.py  onboarding.py  optimization.py  org.py  rag.py  rag_admin.py  (+8 more)
backend/scripts/: __init__.py  ingest_worker.py  rag_ingest.py  retention_purge.py  rollup_daily.py  smoke_test.py
backend/tests/: conftest.py
(+528 files in other folders)
